# pytorch

./: .gitmodules
.ci/docker/ci_commit_pins/: executorch.txt
.ci/pytorch/: test.sh
.github/actions/setup-linux/: action.yml
.github/ci_commit_pins/: vision.txt
.github/workflows/: pull.yml
aten/src/ATen/: CMakeLists.txt
aten/src/ATen/native/mkldnn/: Attention.cpp  Attention.h  Graph.cpp  Graph.h
aten/src/ATen/native/quantized/cpu/qnnpack/: CMakeLists.txt
aten/src/ATen/native/transformers/: attention.cpp
aten/src/ATen/nnapi/: CMakeLists.txt
aten/src/ATen/test/test_install/: CMakeLists.txt
cmake/: Dependencies.cmake
cmake/Modules/: Findetcd-cpp-apiv3.cmake
test/: test_linalg.py
test/cpp/aoti_abi_check/: CMakeLists.txt
test/cpp/aoti_inference/: CMakeLists.txt
test/cpp/api/: CMakeLists.txt
test/cpp/c10d/: CMakeLists.txt
test/cpp/dist_autograd/: CMakeLists.txt
test/cpp/jit/: CMakeLists.txt
test/cpp/lazy/: CMakeLists.txt
test/cpp/lite_interpreter_runtime/: CMakeLists.txt
test/cpp/rpc/: CMakeLists.txt
test/cpp/tensorexpr/: CMakeLists.txt
test/custom_backend/: CMakeLists.txt
test/custom_operator/: CMakeLists.txt
test/dynamo/: test_subclasses.py
test/edge/: CMakeLists.txt
test/export/: test_export.py  test_sparse.py
test/inductor/: test_cpu_cpp_wrapper.py  test_torchinductor.py
test/inductor/cpp/: CMakeLists.txt
test/jit_hooks/: CMakeLists.txt
test/mobile/custom_build/: CMakeLists.txt
test/mobile/lightweight_dispatch/: CMakeLists.txt
test/mobile/nnc/: CMakeLists.txt
torch/: CMakeLists.txt
torch/_dynamo/: vasiliy_debug_analyze_subgraphs.py  vasiliy_debug_extract_subgraphs.py
torch/_export/: non_strict_utils.py  utils.py
torch/_export/passes/: replace_autocast_with_hop_pass.py  replace_set_grad_with_hop_pass.py
torch/_inductor/: config.py  scheduler.py
torch/_inductor/codegen/: triton.py  triton_combo_kernel.py
torch/_inductor/fx_passes/: split_cat.py
torch/autograd/: profiler.py
torch/csrc/distributed/c10d/: TCPStore.hpp
torch/export/: _trace.py
torch/fx/passes/: runtime_assert.py
torch/lib/libshm/: CMakeLists.txt
